Add new request and result  type: GetDependencyDataRequest & GetDependencyDataResult  The Result Adds additional data for each dependency : Licenses, Vulnerabilities, Description, sha1 and HomepageUrl  (The data was added to the ResourceInfo Object)